--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./styles/helpers/index-helpers";
+@import "./styles/base/main";
+@import "./styles/vendors/all";
+@import "./styles/layout/index-layout";
