--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 @import "./styles/helpers/index-helpers";
-@import "./styles/base/main";
+@import "./styles/base/index-base";
 @import "./styles/vendors/all";
 @import "./styles/layout/index-layout";
