--- a/src/styles/layout/_index-layout.scss
+++ b/src/styles/layout/_index-layout.scss
@@ -1,4 +1,7 @@
 @import "./header";
+@import "./content";
 @import "./login";
+@import "./form-nav";
+@import "./form";
 @import "./modal";
 @import "./media";
