--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,17 +1,3 @@
-<form [formGroup]="login" (ngSubmit)="onSubmit()" class="form">
-  <div class="form__item">
-    <label>Email</label>
-    <input type="email" formControlName="usuCorreo" />
-    <span class="input__error">Error</span>
-  </div>
-  <div class="form__item">
-    <label>Password</label>
-    <input type="password" formControlName="usuClave" />
-    <span class="input__error">Error</span>
-  </div>
-  <button class="button" type="submit" [disabled]="isLoading">Login</button>
-  <a class="link" routerLink="/auth/forgot">Forgot password</a>
-</form>
 <!-- 
 <div class="pace pace-inactive">
   <div
@@ -36,179 +22,71 @@
   <div class="pace-activity"></div>
 </div> -->
 
-<section class="login-content">
-  <div class="login-box">
-    <!-- Trigger the modal with a button -->
-    <!-- Modal -->
-    <div class="bs-component">
-      <ul class="nav nav-tabs">
-        <li class="col-sm-6 active">
-          <a href="#iniciar-sesion" data-toggle="tab">Iniciar Sesión</a>
-        </li>
-        <!-- <li class="col-sm-6">
-          <a href="#registrate" data-toggle="tab">Regístrate</a>
-        </li> -->
-      </ul>
-      <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade active in" id="iniciar-sesion">
-          <form
-            style="margin-top: 60px"
-            class="login-form"
-            action=""
-            method="post"
-          >
-            <div class="form-group">
-              <label class="control-label">IDENTIFICACIÓN</label>
-              <input
-                class="form-control validate"
-                type="text"
-                placeholder="Identificación"
-                id="usernamepn"
-                autofocus=""
-                autocomplete="off"
-                name="usernamepn"
-                required=""
-              />
-            </div>
-            <div class="form-group">
-              <label class="control-label">CONTRASEÑA</label>
-              <input
-                class="form-control"
-                type="password"
-                id="passwordpn"
-                name="passwordpn"
-                value=""
-                placeholder="Contraseña"
-                title="Este no parece un usuario de twitter válido"
-                required=""
-              />
-            </div>
-            <div class="form-group">
-              <div class="utility">
-                <div class="animated-checkbox">
-                  <label class="semibold-text">
-                    <input
-                      type="checkbox"
-                      name="tycch"
-                      id="tycch"
-                      required=""
-                    />
-                    <span class="label-text"
-                      >Acepto
-                      <a class="" data-toggle="modal" data-target="#tyc"
-                        >Términos y condiciones</a
-                      >
-                    </span>
-                  </label>
-                </div>
-              </div>
-              <div class="utility">
-                <div class="animated-checkbox">
-                  <label class="semibold-text">
-                    <input
-                      type="checkbox"
-                      name="recordarpn"
-                      id="recordarpn"
-                      value="recordar"
-                    />
-                    <span class="label-text">Recordar mis datos </span>
-                    <!-- - <a data-toggle="flip"> ¿Olvidaste tu contraseña?
-                    </a> -->
-                  </label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group btn-container">
-              <button
-                onclick="checking()"
-                class="btn btn-primary btn-block inicio"
-              >
-                INICIAR SESIÓN
-              </button>
-            </div>
-            <div class="form-group">
-              <div class="utility">
-                <div class="animated-checkbox">
-                  <label class="semibold-text">
-                    <span class="label-text">Mas informacion en:</span>
-                    <a href="">www.comfeco.co</a>
-                  </label>
-                </div>
-              </div>
-            </div>
-          </form>
+<section class="content">
+  <app-wrapper-form>
+    <div class="tab-pane fade in active">
+      <form [formGroup]="login" (ngSubmit)="onSubmit()" class="form">
+        <div class="form-group">
+          <label class="form-label">Email</label>
+          <input
+            class="form-control"
+            placeholder="Escriba su email"
+            type="email"
+            formControlName="usuCorreo"
+          />
+          <span class="input__error">Error</span>
         </div>
-        <div class="tab-pane fade" id="registrate"></div>
-      </div>
+        <div class="form-group">
+          <label class="form-label">Contraseña</label>
+          <input
+            class="form-control"
+            placeholder="Escriba su password"
+            type="password"
+            formControlName="usuClave"
+          />
+          <span class="input__error">Error</span>
+        </div>
+        <div class="form-group">
+          <a class="link bold" routerLink="/auth/forgot" data-toggle="flip">
+            ¿Olvidaste tu contraseña?
+          </a>
+        </div>
+
+        <div class="form-group">
+          <div class="utility">
+            <div class="animated-checkbox">
+              <label class="semibold-text">
+                <input
+                  type="checkbox"
+                  name="recordar"
+                  id="recordar"
+                  value="recordar"
+                />
+                <span class="">Recordar mis datos </span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group btn-container">
+          <!-- <button
+          onclick="checking()"
+          class="btn btn-primary btn-block inicio"
+          > -->
+          <button
+            class="button button-primary"
+            type="submit"
+            [disabled]="isLoading"
+          >
+            INICIAR SESIÓN
+          </button>
+        </div>
+        <div class="form-group">
+          <span class="">Mas informacion en:</span>
+          <!--  NEEDS SANITIZER  -->
+          <a class="link bold" href="#" target="_blank">www.comfeco.com</a>
+        </div>
+      </form>
     </div>
-  </div>
+  </app-wrapper-form>
 </section>
-
-<!-- CSS-->
-<!-- <link rel="stylesheet" type="text/css" href="./css/all.css">
-  <link rel="stylesheet" type="text/css" href="./css/main.css">
-  <link rel="stylesheet" type="text/css" href="./css/header.css">
-  <link rel="stylesheet" type="text/css" href="./css/modal.css"> -->
-<!-- <script type="text/javascript" src="https://aprendiendocalculo.com/portal1/lib/alertify.js"></script>
-  <link rel="stylesheet" href="https://aprendiendocalculo.com/portal1/themes/alertify.core.css">
-  <link rel="stylesheet" href="https://aprendiendocalculo.com/portal1/themes/alertify.default.css"> -->
-<!-- Font-icon css-->
-<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-
-<!-- <link href="https://aprendiendocalculo.com/portal1/css/font-awesome/css/font-awesome.min.css" rel="stylesheet"
-    type="text/css">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-
-<!--   
-  
-  <title>
-    Team Angular #8 </title> -->
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries-->
-<!--if lt IE 9
-       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
-       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
-       -->
-<!-- <script type="text/javascript">
-    function checking() {
-      var x = document.getElementById("tycch").checked;
-      if (x == false) {
-
-        alert("Para Continuar acepte TÉRMINOS y CONDICIONES");
-
-        return x = true;
-
-      }
-    }
-
-    function checking2() {
-      var x = document.getElementById("tycch2").checked;
-      if (x == false) {
-
-        alert("Para Continuar acepte TÉRMINOS y CONDICIONES");
-
-        return x = true;
-
-      }
-    }
-    //       var url = window.location.href;
-
-    //  var activeTab = url.substring(url.indexOf("#") + 1);
-
-    // $(".tab-pane").removeClass("active in");
-
-    // $("#" + activeTab).addClass("active in");
-
-    // $('a[href="#'+ activeTab +'"]').tab('show');
-  </script> -->
-<!-- </head> -->
-
-<!-- <body class="pace-done"> -->
-<!-- <header class=""><div class="logo">
-    <a href=""><img src="images/logocomfeco.svg" alt="Regresar a pagina principal"></a>
-  </div></header>   -->
-
-<!-- <script src="https://aprendiendocalculo.com/portal1/js/jquery-2.1.4.min.js"></script>
-  <script src="https://aprendiendocalculo.com/portal1/js/bootstrap.min.js"></script>
-  <script src="https://aprendiendocalculo.com/portal1/js/plugins/pace.min.js"></script>
-  <script src="https://aprendiendocalculo.com/portal1/js/main.js"></script> -->
