--- a/src/app/auth/components/password/password.component.html
+++ b/src/app/auth/components/password/password.component.html
@@ -1,9 +1,31 @@
-<form [formGroup]="forgot" (ngSubmit)="onSubmit()" class="form">
-  <div class="form__item">
-    <label>Email</label>
-    <input type="email" formControlName="email" />
-    <span class="input__error">Error</span>
-  </div>
-  <button class="button" type="submit">Send pass</button>
-  <a class="link" routerLink="/auth/login">Back login</a>
-</form>
+<section class="content">
+  <app-wrapper-form>
+    <div class="tab-pane fade in active">
+      <form [formGroup]="forgot" (ngSubmit)="onSubmit()" class="form">
+        <div class="form-group">
+          <label class="form-label">Email</label>
+          <input
+            class="form-control"
+            placeholder="Escriba su email"
+            type="email"
+            formControlName="usuCorreo"
+          />
+          <span class="input__error">Error</span>
+        </div>
+        <div class="form-group button-container">
+          <button class="button button-primary" type="submit">
+            Olvide mi contraseña
+          </button>
+        </div>
+        <div class="form-group password-terms">
+          Consulte la
+
+          <!--  NEEDS SANITIZER  -->
+          <button class="link bold">
+            Política de privacidad y protección de datos.
+          </button>
+        </div>
+      </form>
+    </div>
+  </app-wrapper-form>
+</section>
