--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -74,7 +74,7 @@
           class="btn btn-primary btn-block inicio"
           > -->
           <button
-            class="button button-primary"
+            class="button button-primary button-block"
             type="submit"
             [disabled]="isLoading"
           >
