--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -5,6 +5,7 @@
 */
 $color-white: #fff;
 
+$color-gray0: #e5e5e5;
 $color-gray1: #ddd;
 
 $color-bg: #333;
@@ -21,3 +22,5 @@ $color-p-darken: #521e87;
 */
 $border-radius-10: 10px;
 $border-radius-3: 3px;
+
+$border-decoration: 1px solid $color-gray0;
