--- a/src/app/auth/components/modal-terms/modal-terms.component.html
+++ b/src/app/auth/components/modal-terms/modal-terms.component.html
@@ -1,18 +1,25 @@
-<div class="modal fade" id="tyc" role="dialog">
-  <div class="modal-dialog">
+<ng-container *ngIf="isOpen$ | async as isOpen">
+  <div class="modal" [class.hidden]="!isOpen">
     <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">×</button>
-        <h4 class="modal-title">TÉRMINOS Y CONDICIONES</h4>
+    <div class="modal__content">
+      <div class="modal__header">
+        <button
+          (click)="closeModal()"
+          type="button"
+          class="link modal__close"
+          data-dismiss="modal"
+        >
+          &times;
+        </button>
+        <h4 class="modal__title">TÉRMINOS Y CONDICIONES</h4>
       </div>
-      <div class="modal-body">
+      <div class="modal__body">
         <div class="fs12">
-          <p style="text-align: center">
+          <p>
             <strong>TITULO</strong>
             <strong>&nbsp;</strong>
           </p>
-          <p style="text-align: center">
+          <p>
             <strong>TÉRMINOS Y CONDICIONES DE USO</strong>
           </p>
           <p>
@@ -53,12 +60,12 @@
           </p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-            mauris nisl, pharetra eu maximus at, dignissim eget odio. Aenean
-            ornare felis sed diam ullamcorper rhoncus. Pellentesque vel odio
-            eget erat egestas consectetur. Proin vel cursus eros. Quisque eros
-            felis, interdum vitae ultrices non, faucibus id mi. Fusce nec magna
-            fermentum, posuere sem sit amet, rutrum nibh. Integer sed odio eu
-            libero condimentum imperdiet.
+            mauris nisl, pharetra eumodal-dialog maximus at, dignissim eget
+            odio. Aenean ornare felis sed diam ullamcorper rhoncus. Pellentesque
+            vel odio eget erat egestas consectetur. Proin vel cursus eros.
+            Quisque eros felis, interdum vitae ultrices non, faucibus id mi.
+            Fusce nec magna fermentum, posuere sem sit amet, rutrum nibh.
+            Integer sed odio eu libero condimentum imperdiet.
           </p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
@@ -89,11 +96,16 @@
           </p>
         </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">
+      <div class="modal__footer">
+        <button
+          type="button"
+          class="button button-secondary"
+          (click)="closeModal()"
+          data-dismiss="modal"
+        >
           Cerrar
         </button>
       </div>
     </div>
   </div>
-</div>
+</ng-container>
