--- a/src/app/auth/components/password/password.component.html
+++ b/src/app/auth/components/password/password.component.html
@@ -13,7 +13,7 @@
           <span class="input__error">Error</span>
         </div>
         <div class="form-group button-container">
-          <button class="button button-primary" type="submit">
+          <button class="button button-primary button-block" type="submit">
             Olvide mi contraseña
           </button>
         </div>
