--- a/src/styles/layout/_media.scss
+++ b/src/styles/layout/_media.scss
@@ -25,3 +25,23 @@
 //     margin-bottom: 0;
 //   }
 // }
+
+// @media (min-width: 768px) {
+//   .modal-dialog {
+//     width: 600px;
+//     margin: 30px auto;
+//   }
+//   .modal-content {
+//     -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+//     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+//   }
+//   .modal-sm {
+//     width: 300px;
+//   }
+// }
+
+// @media (min-width: 992px) {
+//   .modal-lg {
+//     width: 900px;
+//   }
+// }
