--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -7,6 +7,7 @@ $color-white: #fff;
 
 $color-gray0: #e5e5e5;
 $color-gray1: #ddd;
+$color-gray2: #666;
 
 $color-bg: #333;
 $color-font: #e5e5e5;
@@ -22,5 +23,13 @@ $color-p-darken: #521e87;
 */
 $border-radius-10: 10px;
 $border-radius-3: 3px;
-
 $border-decoration: 1px solid $color-gray0;
+
+/*
+-------------------------------------------
+        form input
+-------------------------------------------
+*/
+$font-size-input: 14px;
+$font-weight-input: 400;
+$line-height-input: 1.44;
