--- a/src/styles/layout/_index-layout.scss
+++ b/src/styles/layout/_index-layout.scss
@@ -1,7 +1,9 @@
 @import "./header";
 @import "./content";
 @import "./login";
-@import "./form-nav";
 @import "./form";
+@import "./form-nav";
+@import "./form-label";
+@import "./form-checkbox";
 @import "./modal";
 @import "./media";
