--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -27,17 +27,17 @@
     <div class="tab-pane fade in active">
       <form [formGroup]="login" (ngSubmit)="onSubmit()" class="form">
         <div class="form-group">
-          <label class="form-label">Email</label>
+          <label class="form-label">CORREO ELECTRONICO</label>
           <input
             class="form-control"
-            placeholder="Escriba su email"
+            placeholder="Escriba su correo electronico"
             type="email"
             formControlName="usuCorreo"
           />
           <span class="input__error">Error</span>
         </div>
         <div class="form-group">
-          <label class="form-label">Contraseña</label>
+          <label class="form-label">CONTRASEÑA</label>
           <input
             class="form-control"
             placeholder="Escriba su password"
