--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="tab-pane fade in active">
       <form [formGroup]="register" (ngSubmit)="onSubmit()" class="form">
         <div class="form-group">
-          <label class="form-label">Nickname</label>
+          <label class="form-label">NICKNAME</label>
           <input
             class="form-control"
             type="text"
@@ -12,7 +12,7 @@
           <span class="input__error">Error</span>
         </div>
         <div class="form-group">
-          <label class="form-label">Email</label>
+          <label class="form-label">CORREO ELECTRONICO</label>
           <input
             class="form-control"
             type="email"
@@ -21,7 +21,7 @@
           <span class="input__error">Error</span>
         </div>
         <div class="form-group">
-          <label class="form-label">Password</label>
+          <label class="form-label">CONTRASEÑA</label>
           <input
             class="form-control"
             type="password"
@@ -30,7 +30,7 @@
           <span class="input__error">Error</span>
         </div>
         <div class="form-group">
-          <label class="form-label">Confirm Password</label>
+          <label class="form-label">CONFIRMAR CONTRASEÑA</label>
           <input
             class="form-control"
             type="password2"
@@ -42,8 +42,9 @@
           <div class="utility">
             <div class="animated-checkbox">
               <label class="semibold-text">
-                <input type="checkbox" name="tycch" id="tycch" required />
-                <span class="label-text">Acepto </span>
+                <!-- <fa-icon [icon]="faUser"></fa-icon>                 -->
+                <input type="checkbox" name="tycch"  id="tycch" required />
+                <span class="label-text">Acepto</span>
               </label>
               <button class="link bold" (click)="onClick()">
                 Términos y condiciones
