--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header class="item">
+  <div class="container">
+    <img src="https://www.comfeco.com/images/logo.svg">
+    <!-- <div class=""> Síguenos en las redes: </div>  -->
+    <nav class="socials">
+      <ul>
+        <li>icon face</li>
+        <li>icon steam</li>
+        <li>icon Youtube</li>
+      </ul>
+    </nav>
+  </div>
+</header>
