--- a/src/styles/layout/_form-nav.scss
+++ b/src/styles/layout/_form-nav.scss
@@ -19,7 +19,7 @@
   bottom: 0;
   left: calc(4em / (2 * -1));
   width: calc(100% + 4em);
-  height: 1.5px;
+  height: 1px;
   background: $color-gray1;
 }
 .nav__item {
@@ -32,6 +32,10 @@
 .nav__item.active {
   border-bottom: 3px solid var(--bg-color2);
   z-index: 100;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(
+90deg
+, rgba(82,30,135,1) 0%, rgba(241,180,6,1) 100%);
 }
 
 .nav__link {
