--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -26,4 +26,10 @@
   background-color: $color-white;
   border: 1px solid currentColor;
   border-radius: $border-radius-3;
+  font-size: $font-size-input;
+  font-weight: $font-weight-input;
+  line-height: $font-size-input;
+  -webkit-transition: border-color ease-in-out 0.15s;
+  -o-transition: border-color ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s;
 }
