--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,13 +1,33 @@
 <header class="item">
   <div class="container">
-    <img src="https://www.comfeco.com/images/logo.svg">
-    <!-- <div class=""> Síguenos en las redes: </div>  -->
-    <nav class="socials">
-      <ul>
-        <li>icon face</li>
-        <li>icon steam</li>
-        <li>icon Youtube</li>
-      </ul>
-    </nav>
+    <!-- <div class="row">
+      <div class="col-sm-6">
+        <img src="https://www.comfeco.com/images/logo.svg" />
+         <div class=""> Síguenos en las redes: </div>  
+      </div>
+      <div class="col-sm-6">
+        <nav class="socials">
+          <ul class="icons-social">
+            <li>
+              <a href="https://www.facebook.com/groups/2637132626546045">
+                <fa-icon [icon]="facebook"></fa-icon>
+              </a>
+            </li>
+            <li>
+              <a href="https://discord.gg/5Bb5yvzNPr">
+                <fa-icon [icon]="discord"></fa-icon>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UC0oi8uH1vxDcyt7b_3iByew"
+              >
+                <fa-icon [icon]="youtube"></fa-icon>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div> -->
   </div>
 </header>
