--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -5,7 +5,7 @@
   text-align: center;
   background: transparent;
   border: none;
-
+  font-size: inherit;
   cursor: pointer;
   transition: color 150ms ease-in-out;
 }
