--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,400i,700);
 @import url(https://fonts.googleapis.com/css?family=Niconne);
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 @font-face {
   font-family: "TypoGraphica";
   src: url("https://aprendiendocalculo.com/portal1/fuentes/TypoGraphica.otf");
@@ -20,11 +20,6 @@
   box-sizing: border-box;
 }
 
-::-moz-selection {
-  color: $color-white;
-  background-color: var(--bg-color3);
-}
-
 ::selection {
   color: $color-white;
   background-color: var(--bg-color3);
@@ -37,10 +32,9 @@ body {
     "Helvetica Neue", Arial, sans-serif;
   line-height: 1.428571429;
   color: $color-bg;
-  background-color: $color-font;
+  background-color: $color-white;
   margin: 0px;
 }
-
 .fade.in {
   opacity: 1;
 }
@@ -50,10 +44,12 @@ body {
 }
 
 label {
-  margin-bottom: 5px;
+  // margin-bottom: 5px;
   font-weight: bold;
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
+}
+svg {
+  color: currentColor;
 }
