--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -15,6 +15,7 @@ $color-primary: #69156a;
 $color-secondary: #ffb703;
 $color-p-lighten: #8a178c;
 $color-p-darken: #521e87;
+$color-danger: #c40b00;
 
 /*
 -------------------------------------------
