--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -24,17 +24,19 @@
 
 <section class="content">
   <app-wrapper-form>
-    <div class="tab-pane fade in active">
+    <div class="tab-pane fade in active" *ngIf="login">
       <form [formGroup]="login" (ngSubmit)="onSubmit()" class="form">
         <div class="form-group">
-          <label class="form-label">CORREO ELECTRONICO</label>
+          <label class="form-label">CORREO ELECTRÓNICO</label>
           <input
             class="form-control"
             placeholder="Escriba su correo electronico"
             type="email"
             formControlName="usuCorreo"
           />
-          <span class="input__error">Error</span>
+          <span class="input__error" *ngIf="emailErrors">
+            {{ emailErrors | json }}
+          </span>
         </div>
         <div class="form-group">
           <label class="form-label">CONTRASEÑA</label>
@@ -44,7 +46,9 @@
             type="password"
             formControlName="usuClave"
           />
-          <span class="input__error">Error</span>
+          <span class="input__error" *ngIf="passErrors">
+            {{ passErrors | json }}
+          </span>
         </div>
         <div class="form-group">
           <a class="link bold" routerLink="/auth/forgot" data-toggle="flip">
@@ -58,14 +62,14 @@
               <fa-icon
                 class="fa-icon"
                 [class.checked]="isChecked"
-                [icon]="!isChecked ? iconCheck : iconUncheck"
+                [icon]="!checkbox.value ? iconCheck : iconUncheck"
                 (click)="onChecked()"
               ></fa-icon>
               <input
                 type="checkbox"
                 name="recordar"
                 id="recordar"
-                (input)="onChecked()"
+                formControlName="checkBoxRecordar"
               />
               <label class="label-text semibold-text" for="recordar">
                 Recordar mis datos
@@ -75,10 +79,6 @@
         </div>
 
         <div class="form-group btn-container">
-          <!-- <button
-          onclick="checking()"
-          class="btn btn-primary btn-block inicio"
-          > -->
           <button
             class="button button-primary button-block"
             type="submit"
