--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -9,16 +9,20 @@
             type="text"
             formControlName="usuNickname"
           />
-          <span class="input__error">Error</span>
+          <span class="input__error" *ngIf="nickErrors">
+            {{ nickErrors | json }}
+          </span>
         </div>
         <div class="form-group">
-          <label class="form-label">CORREO ELECTRONICO</label>
+          <label class="form-label">CORREO ELECTRÓNICO</label>
           <input
             class="form-control"
             type="email"
             formControlName="usuCorreo"
           />
-          <span class="input__error">Error</span>
+          <span class="input__error" *ngIf="emailErrors">
+            {{ emailErrors | json }}
+          </span>
         </div>
         <div class="form-group">
           <label class="form-label">CONTRASEÑA</label>
@@ -27,7 +31,9 @@
             type="password"
             formControlName="usuClave"
           />
-          <span class="input__error">Error</span>
+          <span class="input__error" *ngIf="passErrors">
+            {{ passErrors | json }}
+          </span>
         </div>
         <div class="form-group">
           <label class="form-label">CONFIRMAR CONTRASEÑA</label>
@@ -36,7 +42,9 @@
             type="password2"
             formControlName="usuClave2"
           />
-          <span class="input__error">Error</span>
+          <span class="input__error" *ngIf="confirmErrors">
+            {{ confirmErrors | json }}
+          </span>
         </div>
         <div class="form-group">
           <div class="utility">
