--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,13 +1,18 @@
 <header class="item">
   <div class="container">
-    <!-- <div class="row">
+    <div class="row">
       <div class="col-sm-6">
-        <img src="https://www.comfeco.com/images/logo.svg" />
-         <div class=""> Síguenos en las redes: </div>  
+        <img src="assets/images/logo.svg" />
       </div>
       <div class="col-sm-6">
+        <!-- <div class="row"> -->
+        <!-- <div class="col-sm-7">
+            <div class="">Síguenos en las redes:</div>
+          </div> -->
+        <!-- <div class="col-sm-5"> -->
         <nav class="socials">
           <ul class="icons-social">
+            <li class="label">Síguenos en las redes:</li>
             <li>
               <a href="https://www.facebook.com/groups/2637132626546045">
                 <fa-icon [icon]="facebook"></fa-icon>
@@ -27,7 +32,9 @@
             </li>
           </ul>
         </nav>
+        <!-- </div> -->
+        <!-- </div> -->
       </div>
-    </div> -->
+    </div>
   </div>
 </header>
