--- a/src/styles/layout/_form-nav.scss
+++ b/src/styles/layout/_form-nav.scss
@@ -7,6 +7,97 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+
+  &::before {
+    content: "";
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: calc(4em / (2 * -1));
+    width: calc(100% + 4em);
+    height: 1px;
+    background: red;
+  }
+}
+
+.nav__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  font-size: 1.1em;
+
+  &.active {
+    border-bottom: 3px solid var(--bg-color2);
+    z-index: 100;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(
+      90deg,
+      rgba(82, 30, 135, 1) 0%,
+      rgba(241, 180, 6, 1) 100%
+    );
+  }
+}
+
+.nav__link {
+  text-transform: uppercase;
+
+  &:hover,
+  &:active {
+  }
+}
+
+.nav__links {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 3.5em;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+
+  &::before {
+    content: "";
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: calc(4em / (2 * -1));
+    width: calc(100% + 4em);
+    height: 1px;
+    background: $color-gray1;
+  }
+}
+
+.nav__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  font-size: 1.1em;
+
+  &.active {
+    border-bottom: 3px solid var(--bg-color2);
+    z-index: 100;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(
+      90deg,
+      rgba(82, 30, 135, 1) 0%,
+      rgba(241, 180, 6, 1) 100%
+    );
+  }
 }
 
 .nav__links::before,
@@ -34,8 +125,10 @@
   z-index: 100;
   border-image-slice: 1;
   border-image-source: linear-gradient(
-90deg
-, rgba(82,30,135,1) 0%, rgba(241,180,6,1) 100%);
+    90deg,
+    rgba(82, 30, 135, 1) 0%,
+    rgba(241, 180, 6, 1) 100%
+  );
 }
 
 .nav__link {
