--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -29,7 +29,16 @@
   font-size: $font-size-input;
   font-weight: $font-weight-input;
   line-height: $font-size-input;
-  -webkit-transition: border-color ease-in-out 0.15s;
-  -o-transition: border-color ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s;
+}
+// .form-control::before {
+//   content: "";
+//   display: block;
+//   height: 1px;
+//   padding-bottom: 15px;
+// }
+.input__error {
+  color: $color-danger;
+  font-size: 0.8em;
+  min-height: 0.8em;
 }
