--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -2,8 +2,13 @@ header {
   height: 80px;
   background-color: white;
   text-align: left;
-  color: black;
-
+  color: $color-p-darken;
+  display: contents;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  .label {
+    font-size: 20px;
+  }
   img {
     margin: 0;
     float: left;
@@ -18,15 +23,20 @@ header {
     justify-content: center;
 
     li {
-      margin: 0 5px;
-      font-size: 20px;
       cursor: pointer;
-      color: #d5c5c5;
-      display: inline-block;
-      background-color: $color-primary;
-      width: 31px;
-      height: 30px;
-      border-radius: 15px;
+      display: inline;
+      a {
+        margin: 0 5px;
+        padding: 1px;
+        font-size: 20px;
+        cursor: pointer;
+        color: #d5c5c5;
+        display: inline-block;
+        background-color: $color-primary;
+        width: 31px;
+        height: 30px;
+        border-radius: 15px;
+      }
       svg {
         color: white;
       }
@@ -41,17 +51,21 @@ header {
 @media screen and (max-width: 600px) {
   header {
     order: 0;
-
+    img {
+      float: none;
+    }
     nav {
       line-height: 31px;
       margin-top: -20px;
     }
-
+    .label {
+      display: block;
+    }
     ul {
       flex-flow: column wrap;
       align-items: center;
       justify-content: center;
-
+      margin-left: -40px;
       li {
         margin-bottom: 2px;
       }
