--- a/src/app/auth/components/password/password.component.html
+++ b/src/app/auth/components/password/password.component.html
@@ -6,11 +6,14 @@
           <label class="form-label">Email</label>
           <input
             class="form-control"
+            [class.error]="emailErrors"
             placeholder="Escriba su email"
             type="email"
             formControlName="usuCorreo"
           />
-          <span class="input__error">Error</span>
+          <span class="input__error" *ngIf="emailErrors">
+            {{ emailErrors | validationErrors }}
+          </span>
         </div>
         <div class="form-group button-container">
           <button class="button button-primary button-block" type="submit">
