--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -16,6 +16,7 @@ $color-secondary: #ffb703;
 $color-p-lighten: #8a178c;
 $color-p-darken: #521e87;
 $color-danger: #c40b00;
+$color-danger-alpha: #c40b0050;
 
 /*
 -------------------------------------------
