--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -6,70 +6,77 @@
           <label class="form-label">NICKNAME</label>
           <input
             class="form-control"
+            [class.error]="nickErrors"
             type="text"
+            placeholder="Escriba su nickname"
             formControlName="usuNickname"
           />
           <span class="input__error" *ngIf="nickErrors">
-            {{ nickErrors | json }}
+            {{ nickErrors | validationErrors }}
           </span>
         </div>
         <div class="form-group">
           <label class="form-label">CORREO ELECTRÓNICO</label>
           <input
             class="form-control"
+            [class.error]="emailErrors"
+            placeholder="Escriba su email"
             type="email"
             formControlName="usuCorreo"
           />
           <span class="input__error" *ngIf="emailErrors">
-            {{ emailErrors | json }}
+            {{ emailErrors | validationErrors }}
           </span>
         </div>
         <div class="form-group">
           <label class="form-label">CONTRASEÑA</label>
           <input
             class="form-control"
+            [class.error]="passErrors"
+            placeholder="Escriba su contraseña"
             type="password"
             formControlName="usuClave"
           />
           <span class="input__error" *ngIf="passErrors">
-            {{ passErrors | json }}
+            {{ passErrors | validationErrors }}
           </span>
         </div>
         <div class="form-group">
           <label class="form-label">CONFIRMAR CONTRASEÑA</label>
           <input
             class="form-control"
-            type="password2"
+            placeholder="Confirme su contraseña"
+            [class.error]="confirmErrors"
+            type="password"
             formControlName="usuClave2"
           />
           <span class="input__error" *ngIf="confirmErrors">
-            {{ confirmErrors | json }}
+            {{ confirmErrors | validationErrors }}
           </span>
         </div>
-        <div class="form-group">
-          <div class="utility">
-            <div class="animated-checkbox">
-              <fa-icon
-                class="fa-icon"
-                [class.checked]="isChecked"
-                [icon]="!isChecked ? iconCheck : iconUncheck"
-                (click)="onChecked()"
-              ></fa-icon>
-              <input
-                type="checkbox"
-                name="accept-terms"
-                id="accept-terms"
-                (input)="onChecked()"
-                required
-              />
-              <label class="label-text semibold-text" for="accept-terms">
-                Acepto
-              </label>
-              <button class="link bold" (click)="onClick()">
-                Términos y condiciones
-              </button>
-            </div>
-          </div>
+        <div class="form-group checkbox">
+          <fa-icon
+            class="fa-icon"
+            [class.checked]="isChecked"
+            [icon]="!checkbox.value ? iconCheck : iconUncheck"
+            (click)="onChecked()"
+          ></fa-icon>
+          <input
+            type="checkbox"
+            name="accept-terms"
+            id="accept-terms"
+            formControlName="checkBoxAceptar"
+            required
+          />
+          <label class="label-text semibold-text" for="accept-terms">
+            Acepto
+          </label>
+          <button type="button" class="link bold" (click)="onClick()">
+            Términos y condiciones
+          </button>
+          <span class="input__error" *ngIf="checkboxErrors">
+            {{ checkboxErrors | validationErrors }}
+          </span>
         </div>
         <div class="form-group btn-container">
           <button
