--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
+<app-header>
+  <app-user-menu></app-user-menu>
+</app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
