--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,27 +1,3 @@
-<!-- 
-<div class="pace pace-inactive">
-  <div
-    class="pace-progress"
-    data-progress-text="100%"
-    data-progress="99"
-    style="transform: translate3d(100%, 0px, 0px)"
-  >
-    <div class="pace-progress-inner"></div>
-  </div>
-  <div class="pace-activity"></div>
-</div>
-<div class="pace pace-inactive">
-  <div
-    class="pace-progress"
-    data-progress-text="100%"
-    data-progress="99"
-    style="transform: translate3d(100%, 0px, 0px)"
-  >
-    <div class="pace-progress-inner"></div>
-  </div>
-  <div class="pace-activity"></div>
-</div> -->
-
 <section class="content">
   <app-wrapper-form>
     <div class="tab-pane fade in active" *ngIf="login">
@@ -63,7 +39,7 @@
             <div class="animated-checkbox">
               <fa-icon
                 class="fa-icon"
-                [class.checked]="isChecked"
+                [ngClass]="{ checked: checkbox.value, error: checkboxErrors }"
                 [icon]="!checkbox.value ? iconCheck : iconUncheck"
                 (click)="onChecked()"
               ></fa-icon>
@@ -90,14 +66,10 @@
           </button>
         </div>
         <div class="form-group">
-          <span class="">Mas informacion en:</span>
-          <!--  NEEDS SANITIZER  -->
-          <a
-            class="link bold"
-            [href]="'https://comfeco.com' | domSanitizer"
-            target="_blank"
-            >www.comfeco.com</a
-          >
+          Consulte la
+          <a routerLink="/conditions" class="link bold" target="_blank">
+            Política de privacidad y protección de datos.
+          </a>
         </div>
       </form>
     </div>
