--- a/src/app/auth/components/password/password.component.html
+++ b/src/app/auth/components/password/password.component.html
@@ -22,11 +22,9 @@
         </div>
         <div class="form-group password-terms">
           Consulte la
-
-          <!--  NEEDS SANITIZER  -->
-          <button class="link bold">
+          <a routerLink="/conditions" class="link bold" target="_blank">
             Política de privacidad y protección de datos.
-          </button>
+          </a>
         </div>
       </form>
     </div>
