--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -57,7 +57,7 @@
         <div class="form-group checkbox">
           <fa-icon
             class="fa-icon"
-            [class.checked]="isChecked"
+            [ngClass]="{ checked: checkbox.value, error: checkboxErrors }"
             [icon]="!checkbox.value ? iconCheck : iconUncheck"
             (click)="onChecked()"
           ></fa-icon>
@@ -89,10 +89,10 @@
         </div>
         <div class="form-group register-terms">
           Al registrarse acepta la
-          <!--  NEEDS SANITIZER  -->
-          <button class="link bold">
+
+          <a routerLink="/conditions" class="link bold" target="_blank">
             Política de privacidad y protección de datos.
-          </button>
+          </a>
         </div>
       </form>
     </div>
