--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,39 +1,14 @@
 <header class="item">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-6 image__container">
         <img src="assets/images/logo.svg" />
       </div>
-      <div class="col-sm-6">
-        <!-- <div class="row"> -->
-        <!-- <div class="col-sm-7">
-            <div class="">Síguenos en las redes:</div>
-          </div> -->
-        <!-- <div class="col-sm-5"> -->
-        <nav class="socials">
-          <ul class="icons-social">
-            <li class="label">Síguenos en las redes:</li>
-            <li>
-              <a href="https://www.facebook.com/groups/2637132626546045">
-                <fa-icon [icon]="facebook"></fa-icon>
-              </a>
-            </li>
-            <li>
-              <a href="https://discord.gg/5Bb5yvzNPr">
-                <fa-icon [icon]="discord"></fa-icon>
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.youtube.com/channel/UC0oi8uH1vxDcyt7b_3iByew"
-              >
-                <fa-icon [icon]="youtube"></fa-icon>
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <!-- </div> -->
-        <!-- </div> -->
+      <div class="col-sm-6 nav__container">
+        <app-navbar></app-navbar>
+      </div>
+      <div class="user-menu__container">
+        <ng-content></ng-content>
       </div>
     </div>
   </div>
